[package]
name = "wonder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "*"
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "benches"
harness = false
